fix(virtual-grid): horizontal scroll related fixes

--- a/src/assets/styles/vuetify.scss
+++ b/src/assets/styles/vuetify.scss
@@ -124,3 +124,7 @@ html.dark.overflow-y-hidden {
     height: 24px;
     width: 24px
 }
+
+html.fullscreen-page {
+    overflow-y: hidden !important;
+}
